--- a/themes/vue-october/layouts/default.htm
+++ b/themes/vue-october/layouts/default.htm
@@ -4,7 +4,7 @@ description = "Default layout"
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Vue October - {{ this.page.title }}</title>
+        <title>{{ this.theme.site_name }} - {{ this.page.title }}</title>
         <meta name="description" content="{{ this.page.meta_description }}">
         <meta name="title" content="{{ this.page.meta_title }}">
         <meta name="author" content="OctoberCMS">
