--- a/plugins/acme/shop/views/mail/payment_user.htm
+++ b/plugins/acme/shop/views/mail/payment_user.htm
@@ -1,3 +1,3 @@
 <p>
-  Благодарим вас за успешную оплату заказа <b>{{ user_name }}</b> на нашем сайте!
+  Мы благодарим вас за успешную оплату заказа <b>{{ user_name }}</b> на нашем сайте!
 </p>
