--- a/plugins/acme/shop/views/mail/order.htm
+++ b/plugins/acme/shop/views/mail/order.htm
@@ -1,5 +1,5 @@
 <p>
-    Спасибо за заказ на нашем сайте! Ваш заказ - {{ name }}.
+    Спасибо за заказ на нашем сайте!
 </p>
 
 <table class="table" cellpadding="0" cellspacing="0">
