--- a/themes/vue-october/assets/scss/index.scss
+++ b/themes/vue-october/assets/scss/index.scss
@@ -143,3 +143,4 @@ svg {
 @import './elements/product-comment.scss';
 @import './elements/cart.scss';
 @import './elements/product.scss';
+@import './elements/promo.scss';
