add cf and modal

--- a/plugins/acme/settings/components/promocomponent/default.htm
+++ b/plugins/acme/settings/components/promocomponent/default.htm
@@ -45,7 +45,8 @@
             <div class="promo__buttons">
                 <button
                     class="button promo__button promo__button_pink"
-                    onclick="window.open('https://wa.clck.bar/79610668289?text=Здравствуйте, хочу получить прайс-лист.','_blank');">
+                    data-js-action="open-modal"
+                    data-name="callback">
                     Получить прайс-лист
                 </button>
                 <button
