--- a/themes/vue-october/assets/scss/elements/contact-form.scss
+++ b/themes/vue-october/assets/scss/elements/contact-form.scss
@@ -291,6 +291,17 @@
     color: $primary;
     flex: 1 1;
   }
+
+  &__title {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+
+    @media(max-width: 767px) {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+  }
 }
 .success {
   display: flex;
