--- a/themes/vue-october/assets/scss/index.scss
+++ b/themes/vue-october/assets/scss/index.scss
@@ -144,3 +144,4 @@ svg {
 @import './elements/cart.scss';
 @import './elements/product.scss';
 @import './elements/promo.scss';
+@import './elements/modal.scss';
