--- a/plugins/acme/settings/components/promocomponent/default.htm
+++ b/plugins/acme/settings/components/promocomponent/default.htm
@@ -51,7 +51,7 @@
                 </button>
                 <button
                     class="button promo__button promo__button_light"
-                    onclick="window.open('https://wa.clck.bar/79610668289?text=Здравствуйте, мне нужна консультация.','_blank');">
+                    onclick="window.open('https://wa.clck.bar/79610888289text=Здравствуйте, пришлите пожалуйста актуальный Прайс-лист','_blank');">
                     Консультация менеджера
                 </button>
             </div>
