--- a/plugins/acme/settings/components/promocomponent/default.htm
+++ b/plugins/acme/settings/components/promocomponent/default.htm
@@ -51,7 +51,7 @@
                 </button>
                 <button
                     class="button promo__button promo__button_light"
-                    onclick="window.open('https://wa.clck.bar/79610888289text=Здравствуйте, пришлите пожалуйста актуальный Прайс-лист','_blank');">
+                    onclick="window.open('https://wa.clck.bar/79610888289?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5,%20%D0%BF%D1%80%D0%B8%D1%88%D0%BB%D0%B8%D1%82%D0%B5%20%D0%BF%D0%BE%D0%B6%D0%B0%D0%BB%D1%83%D0%B9%D1%81%D1%82%D0%B0%20%D0%B0%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9%20%D0%9F%D1%80%D0%B0%D0%B9%D1%81-%D0%BB%D0%B8%D1%81%D1%82','_blank');">
                     Консультация менеджера
                 </button>
             </div>
