--- a/themes/vue-october/assets/scss/elements/modal.scss
+++ b/themes/vue-october/assets/scss/elements/modal.scss
@@ -59,6 +59,14 @@
       &_selected {
         display: block;
       }
+
+      &_privacy {
+        max-width: 1250px;
+
+        @media (min-width: 768px) {
+            margin-top: 35px;
+        }
+      }
     }
 
     &__close {
@@ -97,6 +105,180 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+
+    &__title {
+        font-size: 16px;
+        text-transform: initial;
+
+        @media(min-width: 375px) {
+          font-size: 18px;
+        }
+
+        @media(min-width: 768px) {
+          font-size: 25px;
+        }
+
+        @media(min-width: 1024px) {
+          font-size: 30px;
+          margin-bottom: 30px;
+        }
+
+        @media(min-width: 1200px) {
+          font-size: 35px;
+        }
+    }
+
+    &__entry {
+        width: 100%;
+        max-width: 100%;
+        font-size: 12px;
+        font-weight: 300;
+
+        @media (min-width: 768px) {
+          font-size: 14px;
+        }
+
+        @media (min-width: 1200px) {
+          font-size: 16px;
+        }
+
+        p {
+          margin-bottom: 12px;
+
+          @media (min-width: 1200px) {
+            margin-bottom: 16px;
+          }
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+
+        strong, b {
+          font-weight: 500;
+        }
+
+        h1,h2,h3,h4,h5,h6 {
+          font-size: 16px;
+          margin-bottom: 10px;
+          font-weight: 500;
+
+          @media (min-width: 768px) {
+            font-size: 18px;
+          }
+
+          @media (min-width: 1200px) {
+            font-size: 20px;
+            margin-bottom: 20px;
+          }
+        }
+
+        .table-responsive {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        .table {
+            width: 100%;
+            min-width: 768px;
+            color: $primary;
+            vertical-align: top;
+            border-color: $primary;
+            border-spacing: 0;
+            border-top: 1px solid $primary;
+            text-align: left;
+            margin-bottom: 20px;
+
+            @media(min-width: 768px) {
+                min-width: auto;
+            }
+
+            tr, td, th, thead, tbody {
+                border-color: inherit;
+                border-style: solid;
+                border-width: 0;
+                text-align: left;
+                font-weight: 400;
+            }
+
+            thead {
+                vertical-align: bottom;
+            }
+
+            tr {
+                border-width: 0;
+            }
+
+            td, th {
+                font-size: 12px;
+                color: $primary;
+                padding: 10px;
+                border-width: 1px;
+                border-top: 0;
+                border-right: 0;
+
+                &:last-child {
+                    border-right: 1px solid $primary;
+                }
+
+                @media (min-width: 768px) {
+                    font-size: 14px;
+                    padding: 12px;
+                }
+
+                @media (min-width: 1200px) {
+                    font-size: 16px;
+                    padding: 15px;
+                }
+            }
+        }
+
+        ul, ol {
+            list-style-type: none;
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+
+        li {
+            position: relative;
+            margin-bottom: 7.5px;
+            color: $primary;
+
+            &::before {
+                content: '';
+                position: absolute;
+                display: inline-block;
+                width: 6px;
+                height: 6px;
+                border-radius: 10px;
+                top: calc(50% - 3px);
+                left: -18px;
+                background: #fc0;
+            }
+        }
+
+        ol li {
+            counter-increment: step-counter;
+            line-height: 28px;
+            padding-left: 30px;
+
+            &::before {
+                width: 28px;
+                height: 28px;
+                border-radius: 14px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                content: counter(step-counter);
+                position: absolute;
+                top: 0;
+                left: -20px;
+                color: $primary;
+                font-size: 0.8em;
+                background: $secondary;
+            }
+        }
     }
 
 }
