--- a/themes/vue-october/assets/scss/elements/promo.scss
+++ b/themes/vue-october/assets/scss/elements/promo.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 30px;
+    position: relative;
 
     @media(min-width: 768px) {
         padding-bottom: 40px;
@@ -14,6 +15,12 @@
 
     @media(min-width: 992px) {
         height: 100vh;
+    }
+
+    &_privacy {
+        @media(max-width: 767px) {
+            padding-bottom: 85px;
+        }
     }
 
     &::before {
@@ -382,5 +389,52 @@
             margin-left: 15px;
             margin-right: 15px;
         }
+    }
+
+    &__footer {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        background: $primary;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 3;
+        padding: 15px;
+    }
+
+    &__footer-text {
+        font-size: 12px;
+        color: #FFFFFF;
+        font-weight: 400;
+        margin-bottom: 10px;
+
+        @media(min-width: 768px) {
+            font-size: 14px;
+            margin-bottom: 15px;
+        }
+
+    }
+
+    &__footer-url {
+        font-size: 12px;
+        color: #fc0;
+        font-weight: 400;
+        text-decoration: underline;
+        background: none;
+        appearance: none;
+        border: none;
+        padding: 0;
+        margin: 0;
+
+        @media(min-width: 768px) {
+            font-size: 14px;
+        }
+
+        &:hover {
+            text-decoration: none;
+        }
+
     }
 }
